objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Contact_Age__c</fullName>
        <label>Contact Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contact_Experience__c</fullName>
        <label>Contact Experience</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Languages__c</fullName>
        <label>Languages</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Secondary</fullName>
                </value>
                <value>
                    <fullName>Tertiary</fullName>
                </value>
                <value>
                    <fullName>Primary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>test_backpro_field__c</fullName>
        <label>test backpro field</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>test_con_1__c</fullName>
        <label>test con 1 upd</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>test_con_2__c</fullName>
        <label>test con 2 upd</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>test_con_3__c</fullName>
        <label>test con 3 upd</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>test_con_4_update__c</fullName>
        <label>test con 4 update</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>BulkMessageContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.PHONE3</columns>
        <columns>CONTACT.LAST_ACTIVITY</columns>
        <filterScope>Everything</filterScope>
        <label>Bulk_SMS_Contacts</label>
    </listViews>
    <listViews>
        <fullName>MyContacts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Contacts</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <recordTypes>
        <fullName>CRM_Work</fullName>
        <active>true</active>
        <label>CRM Work</label>
    </recordTypes>
    <recordTypes>
        <fullName>CRM_Work_SE</fullName>
        <active>true</active>
        <label>CRM Work SE</label>
    </recordTypes>
    <recordTypes>
        <fullName>X360_Connect_Contact</fullName>
        <active>true</active>
        <label>X360 Connect Contact</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>